--- a/groupchat.gui/MainWindow.axaml
+++ b/groupchat.gui/MainWindow.axaml
@@ -1,15 +1,27 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:gui="clr-namespace:groupchat.gui"
         x:Class="groupchat.gui.MainWindow"
         Width="400" Height="600">
+    <Window.DataTemplates>
+        <DataTemplate DataType="{x:Type gui:ChatMessage}">
+            <StackPanel Margin="2">
+                <TextBlock Text="{Binding Text}" Foreground="{Binding Color}" TextWrapping="Wrap"/>
+            </StackPanel>
+        </DataTemplate>
+    </Window.DataTemplates>
     <Grid>
-        <!-- Login Panel -->
-        <StackPanel x:Name="LoginPanel" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <!-- Startup Panel -->
+        <StackPanel x:Name="StartupPanel" VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock Text="Enter your nickname:"/>
             <TextBox x:Name="NicknameBox" Width="200" Margin="0,5"/>
-            <Button Content="OK" Click="LoginButton_Click"/>
+            
+            <TextBlock Text="Select network adapter:" Margin="0,10,0,0"/>
+            <ComboBox x:Name="AdapterComboBox" Width="300"/>
+            
+            <Button Content="Start Chat" Click="StartChat_Click" Margin="0,10,0,0"/>
         </StackPanel>
-
+        
         <!-- Chat Panel -->
         <StackPanel x:Name="ChatPanel" IsVisible="False">
             <ListBox x:Name="MessagesList" Height="500"/>
