--- a/groupchat.gui/App.axaml
+++ b/groupchat.gui/App.axaml
@@ -2,8 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="groupchat.gui.App"
              RequestedThemeVariant="Dark">
-
+    
     <Application.Styles>
         <FluentTheme/>
     </Application.Styles>
+    
+    <Application.Resources>
+        <FontFamily x:Key="SpaceMonoFont">avares://groupchat.gui/Assets/Fonts/#Space Mono</FontFamily>
+    </Application.Resources>
+
 </Application>
