--- a/groupchat.gui/MainWindow.axaml
+++ b/groupchat.gui/MainWindow.axaml
@@ -2,7 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:gui="clr-namespace:groupchat.gui"
         x:Class="groupchat.gui.MainWindow"
-        Width="400" Height="600">
+        Width="400" Height="600"
+        FontFamily="{StaticResource SpaceMonoFont}"
+        Title="Group Chat"
+        Background="Black"
+        SystemDecorations="Full">
     <Window.DataTemplates>
         <DataTemplate DataType="{x:Type gui:ChatMessage}">
             <StackPanel Margin="2">
