--- a/groupchat.gui/MainWindow.axaml
+++ b/groupchat.gui/MainWindow.axaml
@@ -37,7 +37,7 @@
                 <Button Grid.Column="2" Width="28" Height="28"
                         VerticalAlignment="Center" HorizontalAlignment="Center"
                         Background="Transparent" BorderBrush="Transparent"
-                        Click="MinimizeButtonClick">
+                        Click="CloseButton_Click">
                     <TextBlock Text="X" HorizontalAlignment="Center" VerticalAlignment="Center" 
                                FontSize="16" Foreground="White" FontWeight="Bold"/>
                     <Button.Styles>
@@ -53,24 +53,68 @@
         <!-- Main content -->
         <Grid Grid.Row="1">
             <!-- Startup Panel -->
-            <StackPanel x:Name="StartupPanel" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="20">
-                <TextBlock Text="Enter your nickname:" Foreground="White"/>
-                <TextBox x:Name="NicknameBox" Width="200" Margin="0,5" Background="Black" Foreground="White"/>
+            <StackPanel x:Name="StartupPanel" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="True">
+                <TextBlock Text="Enter your nickname:" Foreground="White" Margin="5" HorizontalAlignment="Center"/>
+                <TextBox x:Name="NicknameBox" HorizontalContentAlignment="Center" MaxLength="32" Width="310" 
+                         Margin="0, 5, 0, 30" Background="Black" Foreground="White" HorizontalAlignment="Stretch"
+                         KeyDown="NicknameBox_OnKeyDown"
+                         />
                 
-                <TextBlock Text="Select network adapter:" Margin="0,10,0,0" Foreground="White"/>
-                <ComboBox x:Name="AdapterComboBox" Width="300" Background="Black" Foreground="White"/>
-                
-                <Button Content="Start Chat" Click="StartChat_Click" Margin="0,10,0,0"/>
+                <TextBlock Text="Select network adapter:" HorizontalAlignment="Center" Margin="0, 0,0,10" Foreground="White"/>
+                <ComboBox x:Name="AdapterComboBox"
+                          Width="750"
+                          Background="Black"
+                          Foreground="White"
+                          HorizontalContentAlignment="Center">
+                    <ComboBox.HorizontalAlignment>Center</ComboBox.HorizontalAlignment>
+                    <ComboBox.Styles>
+                        <Style Selector="ComboBoxItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        </Style>
+                    </ComboBox.Styles>
+                </ComboBox>                
+                <Button Content="Start Chat" Click="StartChat_Click" HorizontalAlignment="Center" Margin="0,20,0,0"/>
             </StackPanel>
             
-            <!-- Chat Panel -->
-            <StackPanel x:Name="ChatPanel" IsVisible="False" Margin="10">
-                <ListBox x:Name="MessagesList" Height="450" Background="Black" Foreground="White"/>
-                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBox x:Name="InputBox" Width="300" Background="Black" Foreground="White"/>
-                    <Button Content="Send" Click="Send_Click" Margin="5,0,0,0"/>
-                </StackPanel>
-            </StackPanel>
+            <Grid x:Name="ChatPanel" Margin="0,0,0,5" IsVisible="False">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>   
+                    <RowDefinition Height="Auto"/> 
+                </Grid.RowDefinitions>
+
+                <ScrollViewer Grid.Row="0"
+                              x:Name="MessagesScrollViewer"
+                              Background="Black"
+                              VerticalScrollBarVisibility="Auto"
+                              HorizontalScrollBarVisibility="Disabled"
+                              Margin="3">
+                    <ItemsControl x:Name="MessagesList"
+                                  Background="Black"
+                                  Foreground="White"
+                                  HorizontalAlignment="Stretch"
+                                  VerticalAlignment="Stretch">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </ScrollViewer>
+
+                <TextBox Grid.Row="1"
+                         x:Name="InputBox"
+                         Height="100"
+                         MaxLength="900"
+                         Width="780"
+                         Watermark="Type here to send messages and press enter to send..."
+                         Background="Black"
+                         Foreground="White"
+                         HorizontalAlignment="Stretch"
+                         VerticalAlignment="Bottom"
+                         Margin="3"
+                         KeyDown="InputBox_OnKeyDown"/>
+                
+            </Grid>
         </Grid>
     </Grid>
 
