--- a/groupchat.gui/MainWindow.axaml
+++ b/groupchat.gui/MainWindow.axaml
@@ -11,18 +11,15 @@
 
     <Grid RowDefinitions="Auto,*">
         <Border Background="#222" Height="30" PointerPressed="TitleBar_PointerPressed">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <TextBlock Text="Group Chat" VerticalAlignment="Center" Margin="6"
-                           Foreground="White" FontWeight="DemiBold"/>
-
+            <Grid ColumnDefinitions="*,Auto,Auto, Auto">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="6">
+                    <Image Width="16" Height="16" Source="avares://groupchat.gui/Assets/sigma.png" VerticalAlignment="Center" Margin="2 0"/>
+                    <TextBlock Text="Group Chat" VerticalAlignment="Center" 
+                               Foreground="White" FontWeight="DemiBold" Margin="4,0,0,0"/>
+                </StackPanel>
+                
                 <!-- Minimize button -->
-                <Button Grid.Column="1" Width="28" Height="28" 
+                <Button Grid.Column="2" Width="28" Height="28" 
                         VerticalAlignment="Center" HorizontalAlignment="Center"
                         Background="Transparent" BorderBrush="Transparent"
                         Click="MinimizeButtonClick" FontWeight="Bold">
@@ -34,7 +31,7 @@
                         </Style>
                     </Button.Styles>
                 </Button>
-                <Button Grid.Column="2" Width="28" Height="28"
+                <Button Grid.Column="3" Width="28" Height="28"
                         VerticalAlignment="Center" HorizontalAlignment="Center"
                         Background="Transparent" BorderBrush="Transparent"
                         Click="CloseButton_Click">
@@ -53,15 +50,38 @@
         <!-- Main content -->
         <Grid Grid.Row="1">
             <!-- Startup Panel -->
-            <StackPanel x:Name="StartupPanel" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="True">
-                <TextBlock Text="Enter your nickname:" Foreground="White" Margin="5" HorizontalAlignment="Center"/>
-                <TextBox x:Name="NicknameBox" HorizontalContentAlignment="Center" MaxLength="32" Width="310" 
-                         Margin="0, 5, 0, 30" Background="Black" Foreground="White" HorizontalAlignment="Stretch"
-                         KeyDown="NicknameBox_OnKeyDown"
-                         />
-                
-                <TextBlock Text="Select network adapter:" HorizontalAlignment="Center" Margin="0, 0,0,10" Foreground="White"/>
+            <Grid VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="StartupPanel"
+                  RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto">
+
+                <!-- Nickname label -->
+                <TextBlock Grid.Row="0"
+                           Text="Enter your nickname:"
+                           Foreground="White"
+                           Margin="5"
+                           HorizontalAlignment="Center"/>
+
+                <!-- Nickname input -->
+                <TextBox x:Name="NicknameBox"
+                         Grid.Row="1"
+                         HorizontalContentAlignment="Center"
+                         MaxLength="32"
+                         Width="310"
+                         Margin="0, 5, 0, 30"
+                         Background="Black"
+                         Foreground="White"
+                         HorizontalAlignment="Stretch"
+                         KeyDown="NicknameBox_OnKeyDown"/>
+
+                <!-- Network adapter label -->
+                <TextBlock Grid.Row="2"
+                           Text="Select network adapter:"
+                           HorizontalAlignment="Center"
+                           Margin="0, 0, 0, 10"
+                           Foreground="White"/>
+
+                <!-- Adapter ComboBox -->
                 <ComboBox x:Name="AdapterComboBox"
+                          Grid.Row="3"
                           Width="750"
                           Background="Black"
                           Foreground="White"
@@ -72,16 +92,30 @@
                             <Setter Property="HorizontalContentAlignment" Value="Center"/>
                         </Style>
                     </ComboBox.Styles>
-                </ComboBox>                
-                <Button Content="Start Chat" Click="StartChat_Click" HorizontalAlignment="Center" Margin="0,20,0,0"/>
-            </StackPanel>
-            
-            <Grid x:Name="ChatPanel" Margin="0,0,0,5" IsVisible="False">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>   
-                    <RowDefinition Height="Auto"/> 
-                </Grid.RowDefinitions>
+                </ComboBox>
 
+                <!-- Start button -->
+                <Button Grid.Row="4"
+                        Content="Start Chat"
+                        Click="StartChat_Click"
+                        HorizontalAlignment="Center"
+                        Margin="0,20,0,0"/>
+
+                <!-- Error message -->
+                <TextBlock x:Name="ErrorText"
+                           Grid.Row="5"
+                           Foreground="DarkRed"
+                           HorizontalAlignment="Center"
+                           TextAlignment="Center"
+                           Margin="0, 15, 0, 0"
+                           FontSize="16"
+                           MaxWidth="750"
+                           TextWrapping="Wrap"
+                           />
+            </Grid>
+            
+            <!-- Main panel (chat) -->
+            <Grid x:Name="ChatPanel" Margin="0,0,0,5" IsVisible="False" RowDefinitions="*,Auto">
                 <ScrollViewer Grid.Row="0"
                               x:Name="MessagesScrollViewer"
                               Background="Black"
@@ -112,6 +146,7 @@
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Bottom"
                          Margin="3"
+                         TextWrapping="Wrap"
                          KeyDown="InputBox_OnKeyDown"/>
                 
             </Grid>
